- Controllers   * added method pie3d in application controller to make     the stats graph   * refactoring in computers and workstations controllers
- View
  * addapted to the changes in stats refactoring in controllers

--- a/test/fixtures/computers.yml
+++ b/test/fixtures/computers.yml
@@ -3,7 +3,7 @@
 one:
   id: 1
   name: computer_one
-  mac: 13:23:43:15:53:30
+  mac: '13:23:43:15:53:30'
   ip: 132.54.23.60
   place_id: 1
   available: true
@@ -12,7 +12,7 @@ one:
 two:
   id: 2
   name: computer_two
-  mac: 13:23:43:15:53:31
+  mac: '13:23:43:15:53:31'
   ip: 132.54.23.61
   place_id: 2
   available: true
@@ -21,7 +21,7 @@ two:
 three:
   id: 3
   name: computer_three
-  mac: 13:23:43:15:53:32
+  mac: '13:23:43:15:53:32'
   ip: 132.54.23.62
   place_id: 2
   available: true
@@ -30,7 +30,7 @@ three:
 four:
   id: 4
   name: computer_four
-  mac: 13:23:43:15:53:33
+  mac: '13:23:43:15:53:33'
   ip: 132.54.23.63
   place_id: 3
   available: false
