--- a/test/fixtures/dvds.yml
+++ b/test/fixtures/dvds.yml
@@ -7,6 +7,7 @@ one:
   mark_id : 3
   writable: false
   computer_id: 1
+  bill_id: 1
 
 two:
   id: 2
@@ -15,6 +16,7 @@ two:
   mark_id : 5
   writable: false
   computer_id: 2
+  bill_id: 1
 
 three:
   id: 3
@@ -23,6 +25,7 @@ three:
   mark_id : 7
   writable: false
   computer_id: 3
+  bill_id: 2
 
 four:
   id: 4
@@ -31,3 +34,4 @@ four:
   mark_id : 8
   writable: true
   computer_id: 4
+  bill_id: 2
