--- a/test/fixtures/printers.yml
+++ b/test/fixtures/printers.yml
@@ -6,6 +6,7 @@ one:
   serialnumber: 1212324000
   mark_id : 1
   place_id: 1
+  bill_id: 1
 
 two:
   id: 2
@@ -13,6 +14,7 @@ two:
   serialnumber: 1212324001
   mark_id : 1
   place_id: 1
+  bill_id: 1
 
 three:
   id: 3
@@ -20,3 +22,4 @@ three:
   serialnumber: 1212324002
   mark_id : 1
   place_id: 1
+  bill_id: 2
