--- a/test/fixtures/bills.yml
+++ b/test/fixtures/bills.yml
@@ -1,7 +1,11 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-# one:
-#   column: value
-#
-# two:
-#   column: value
+one:
+  id: 1
+  code: 001
+  company_id: 1
+
+two:
+  id: 2
+  code: 050
+  company_id: 2
