--- a/test/fixtures/memories.yml
+++ b/test/fixtures/memories.yml
@@ -6,6 +6,7 @@ one:
   serialnumber: 121232234
   mark_id : 7
   computer_id: 1
+  bill_id: 1
 
 two:
   id: 2
@@ -13,6 +14,7 @@ two:
   serialnumber: 121234876
   mark_id : 7
   computer_id: 2
+  bill_id: 1
 
 three:
   id: 3
@@ -20,6 +22,7 @@ three:
   serialnumber: 121234223
   mark_id : 5
   computer_id: 3
+  bill_id: 1
 
 four:
   id: 4
@@ -27,3 +30,4 @@ four:
   serialnumber: 121234000
   mark_id : 6
   computer_id: 4
+  bill_id: 2
