--- a/test/fixtures/mother_boards.yml
+++ b/test/fixtures/mother_boards.yml
@@ -7,6 +7,7 @@ one:
   serialnumber: 121232234
   mark_id : 7
   computer_id: 1
+  bill_id: 1
 
 two:
   id: 2
@@ -14,6 +15,7 @@ two:
   serialnumber: 121234876
   mark_id : 7
   computer_id: 2
+  bill_id: 1
 
 three:
   id: 3
@@ -21,6 +23,7 @@ three:
   serialnumber: 121234223
   mark_id : 5
   computer_id: 3
+  bill_id: 1
 
 four:
   id: 4
@@ -28,3 +31,4 @@ four:
   serialnumber: 121234000
   mark_id : 6
   computer_id: 4
+  bill_id: 2
