- Controllers   * added new method to show statistic graphic
- Views
  * changes in views to show graphics

- Public
  * added new swf file in public directory

- Fixtures
  * added more data in places fixtures

--- a/test/fixtures/places.yml
+++ b/test/fixtures/places.yml
@@ -27,5 +27,30 @@ five:
 
 six:
    id: 6
-   title: Departmento de Matematicas
+   title: Contabilidad
+   description: department
+
+seven:
+   id: 7
+   title: Cooperadora
+   description: office
+
+eigth:
+   id: 8
+   title: Finanzas
+   description: department
+
+nine:
+   id: 9
+   title: Creditos
+   description: department
+
+ten:
+   id: 10
+   title: Financiera
+   description: department
+
+eleven:
+   id: 11
+   title: Sala C
    description: department
