--- a/test/fixtures/memories.yml
+++ b/test/fixtures/memories.yml
@@ -2,32 +2,32 @@
 
 one:
   id: 1
-  model: PC 100
   serialnumber: 121232234
-  mark_id : 7
+  mark_id : 3
+  model_id: 1
   inventory_register : 4532523535
   computer_id: 1
 
 two:
   id: 2
-  model: PC 66
+  model_id: 2
+  mark_id : 3
   serialnumber: 121234876
-  mark_id : 7
   inventory_register : 354636346
   computer_id: 2
 
 three:
   id: 3
-  model: PC 121
+  model_id: 2
+  mark_id : 1
   serialnumber: 121234223
-  mark_id : 5
   inventory_register : 676414124
   computer_id: 3
 
 four:
   id: 4
-  model: PC 256
+  model_id: 1
+  mark_id : 2
   serialnumber: 121234000
-  mark_id : 6
   inventory_register : 537686787
   computer_id: 4
