- Spec   * added workstations controller spec
- Fixtures Specs
  * fixing fixtures to prove specs

--- a/spec/fixtures/computers.yml
+++ b/spec/fixtures/computers.yml
@@ -8,6 +8,7 @@ one:
   place_id: 1
   available: true
   is_part_of_a_workstation: false
+  inventory_register : 234234242
 
 two:
   id: 2
@@ -17,6 +18,7 @@ two:
   place_id: 2
   available: true
   is_part_of_a_workstation: false
+  inventory_register : 234454441
 
 three:
   id: 3
@@ -26,6 +28,7 @@ three:
   place_id: 2
   available: true
   is_part_of_a_workstation: false
+  inventory_register : 4424354355
 
 four:
   id: 4
@@ -35,3 +38,145 @@ four:
   place_id: 3
   available: false
   is_part_of_a_workstation: false
+  inventory_register : 2423424234
+
+five:
+  id: 5
+  name: computer_five
+  mac: '13:23:43:15:53:34'
+  ip: 132.54.23.64
+  place_id: 2
+  available: true
+  is_part_of_a_workstation: false
+  inventory_register : 42454346
+
+six:
+  id: 6
+  name: computer_six
+  mac: '13:23:43:15:53:35'
+  ip: 132.54.23.65
+  place_id: 2
+  available: true
+  is_part_of_a_workstation: false
+  inventory_register : 54646624545
+
+seven:
+  id: 7
+  name: computer_seven
+  mac: '13:23:43:15:53:36'
+  ip: 132.54.23.66
+  place_id: 5
+  available: true
+  is_part_of_a_workstation: false
+  inventory_register : 245235523454
+
+eigth:
+  id: 8
+  name: computer_eigth
+  mac: '13:23:43:15:53:37'
+  ip: 132.54.23.67
+  place_id: 4
+  available: false
+  is_part_of_a_workstation: false
+  inventory_register : 453253254235
+
+nine:
+  id: 9
+  name: computer_nine
+  mac: '13:23:43:15:53:38'
+  ip: 132.54.23.68
+  place_id: 5
+  available: true
+  is_part_of_a_workstation: false
+  inventory_register : 345235235325
+
+ten:
+  id: 10
+  name: computer_ten
+  mac: '13:23:43:15:53:39'
+  ip: 132.54.23.69
+  place_id: 4
+  available: true
+  is_part_of_a_workstation: false
+  inventory_register : 676576776576
+
+eleven:
+  id: 11
+  name: computer_eleven
+  mac: '13:23:43:15:53:40'
+  ip: 132.54.23.70
+  place_id: 5
+  available: false
+  is_part_of_a_workstation: false
+  inventory_register : 35534535354
+
+twelve:
+  id: 12
+  name: computer_twelve
+  mac: '13:23:43:15:53:41'
+  ip: 132.54.23.71
+  place_id: 2
+  available: false
+  is_part_of_a_workstation: false
+  inventory_register : 35534535434
+
+thirteen:
+  id: 13
+  name: computer_thirteen
+  mac: '13:23:43:15:53:42'
+  ip: 132.54.23.72
+  place_id: 2
+  available: false
+  is_part_of_a_workstation: false
+  inventory_register : 35534535444
+
+fourteen:
+  id: 14
+  name: computer_fourteen
+  mac: '13:23:43:15:53:43'
+  ip: 132.54.23.73
+  place_id: 2
+  available: false
+  is_part_of_a_workstation: false
+  inventory_register : 35534535222
+
+fifteen:
+  id: 15
+  name: computer_fifteen
+  mac: '13:23:43:15:53:44'
+  ip: 132.54.23.74
+  place_id: 2
+  available: false
+  is_part_of_a_workstation: false
+  inventory_register : 35554535434
+
+sixteen:
+  id: 16
+  name: computer_sixteen
+  mac: '13:23:43:15:53:45'
+  ip: 132.54.23.75
+  place_id: 2
+  available: false
+  is_part_of_a_workstation: false
+  inventory_register : 35554665434
+
+eigthteen:
+  id: 18
+  name: computer_eigthteen
+  mac: '13:23:43:15:53:46'
+  ip: 132.54.23.76
+  place_id: 2
+  available: false
+  is_part_of_a_workstation: false
+  inventory_register : 35554665466
+
+nineteen:
+  id: 19
+  name: computer_nineteen
+  mac: '13:23:43:15:53:47'
+  ip: 132.54.23.77
+  place_id: 2
+  available: false
+  is_part_of_a_workstation: false
+  inventory_register : 35554665477
+
