--- a/spec/fixtures/places.yml
+++ b/spec/fixtures/places.yml
@@ -1,7 +1,56 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-# one:
-#   column: value
-#
-# two:
-#   column: value
+one:
+   id: 1
+   title: Oficina de Personal
+   description: office
+
+two:
+   id: 2
+   title: Oficina de Pasantias
+   description: office
+
+three:
+   id: 3
+   title: Sala A
+   description: room
+
+four:
+   id: 4
+   title: Sala B
+   description: room
+
+five:
+   id: 5
+   title: Deposito Informatica
+   description: store
+
+six:
+   id: 6
+   title: Contabilidad
+   description: department
+
+seven:
+   id: 7
+   title: Cooperadora
+   description: office
+
+eigth:
+   id: 8
+   title: Finanzas
+   description: department
+
+nine:
+   id: 9
+   title: Creditos
+   description: department
+
+ten:
+   id: 10
+   title: Financiera
+   description: department
+
+eleven:
+   id: 11
+   title: Sala C
+   description: department
