--- a/spec/fixtures/printers.yml
+++ b/spec/fixtures/printers.yml
@@ -1,7 +1,25 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-# one:
-#   column: value
-#
-# two:
-#   column: value
+one:
+  id: 1
+  model_id: 3
+  serialnumber: 1212324000
+  mark_id : 1
+  place_id: 2
+  inventory_register : 41242445654
+
+two:
+  id: 2
+  model_id: 3
+  serialnumber: 1212324001
+  mark_id : 1
+  place_id: 2
+  inventory_register : 4245565465
+
+three:
+  id: 3
+  model_id: 3
+  serialnumber: 1212324002
+  mark_id : 1
+  place_id: 2
+  inventory_register : 3254576756
