--- a/spec/fixtures/cds.yml
+++ b/spec/fixtures/cds.yml
@@ -1,7 +1,37 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-# one:
-#   column: value
-#
-# two:
-#   column: value
+one:
+  id: 1
+  model_id: 1
+  serialnumber: 121232234
+  mark_id : 3
+  writable: false
+  inventory_register : 2142424124
+  computer_id: 1
+
+two:
+  id: 2
+  model_id: 1
+  serialnumber: 121234876
+  mark_id : 3
+  writable: false
+  inventory_register : 1412413434
+  computer_id: 2
+
+three:
+  id: 3
+  model_id: 2
+  serialnumber: 121234223
+  mark_id : 3
+  writable: false
+  inventory_register : 13434141431
+  computer_id: 3
+
+four:
+  id: 4
+  model_id: 2
+  serialnumber: 121234000
+  mark_id : 3
+  writable: false
+  inventory_register : 1412412414
+  computer_id: 4
